# julia_brot

./: .buildinfo  .coveragerc  .gitignore  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE.txt  MANIFEST.in  README.rst  authors.html  changelog.html  contributing.html  genindex.html  index.html  license.html  objects.inv  py-modindex.html  pyproject.toml  readme.html  search.html  searchindex.js  setup.cfg  setup.py  tox.ini
.github/workflows/: docs.yml  release.yml
_modules/: index.html
_modules/julia_brot/: julia_set.html  mandelbrot_set.html
_sources/: index.rst.txt
_sources/api/: julia_brot.rst.txt  modules.rst.txt
api/: julia_brot.html  modules.html
docs/: conf.py  index.rst
doctrees/: authors.doctree  changelog.doctree  contributing.doctree  index.doctree  license.doctree  readme.doctree
doctrees/api/: julia_brot.doctree  modules.doctree
html/: searchindex.js
html/_modules/julia_brot/: mandelbrot_set.html
html/_sources/api/: julia_brot.rst.txt
html/api/: modules.html
src/: te.py
src/julia_brot/: __init__.py  common.py  julia.pyx  julia_set.py  mandelbrot.pyx  mandelbrot_set.py
tests/: conftest.py  test_julia.py  test_mandelbrot.py  test_skeleton.py
